tests/fixtures/invalid/missing_import.pi
# Error: Import que no existe
project test
   import nonexistent_module

task main
   goal do something
